# swpt_login

./: .dockerignore  .gitignore  Dockerfile  LOCALIZATION.md  Pipfile  README.md  README.rst  development.env  docker-compose.yml  pyproject.toml  pytest.ini  release.sh  wsgi.py
.github/workflows/: release_image.yml  run_tests.yml
docker/: entrypoint.sh  hydra.yaml  supervisord.conf
docker/pg/: create-users.sql
docker_flask/: Dockerfile  logging.conf
migrations/versions/: 24db47bcaf08_.py  324d297991e7_.py  376fc80bbed6_.py  655213bc148f_.py  7043bcccddcb_fix_analyze_threshold.py  8614e8d155d4_storage_params.py  8614e8d155d4_storage_parmas.py  8f82547123fc_.py  9f766201fe3a_.py  a5da48a60001_.py  c0c341aba792_create_pktypes.py  d4bf9e85b7c3_.py  e61c239caaae_.py
swpt_login/: __init__.py  api_requests_session.py  babel.cfg  captcha.py  cli.py  config.py  emails.py  extensions.py  flask_redis.py  hydra.py  logging.conf  models.py  redis.py  routes.py  utils.py
swpt_login/static/: altcha.min.js  style.css
swpt_login/templates/: 500.html  _altcha.html  _grant_scope_checkbox.html  _login_link.html  _ok_link.html  _recovery_code.html  change_email_login.html  choose_new_email.html  choose_password.html  confirm_account_deletion.html  delete_account.txt  delete_account_login.html  duplicate_registration.txt  enter_password.html  enter_verification_code.html  grant_scopes.html  html_mail_layout.html  layout.html  login.html  report_account_deletion_success.html  report_email_change_failure.html  report_email_change_success.html  report_expired_link.html  report_inactive_account.html  report_recovery_code_change.html  report_recovery_success.html  report_revoke_granted_access_success.html  report_sent_email.html  report_signup_success.html  revoke_granted_access.html
swpt_login/translations/bg/LC_MESSAGES/: messages.po
tests/: conftest.py  test_captcha.py  test_cli.py  test_emails.py  test_models.py  test_redis.py  test_routes.py  test_utils.py
