[project]
name = "swpt_login"
version = "0.1.0"
description = "Swaptacular micro-service responsible for user's sign up and login"
authors = [
  { name = "Evgeni Pandurski", email = "pandurski@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dynamic = [ "dependencies" ]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
gunicorn = "*"
python-json-logger = "^2.0.4"
redis = "^3.5"
requests = "^2.24"
user-agents = "^2.2"
psycopg2-binary = "^2.8"
requests-oauthlib = "^1.3"
flask-mail = "^0.9.1"
flask-migrate = "^2.4"
flask-redis = "^0.4.0"
flask-babel = "^2.0"
flask-env = "^2.0"
swpt_pythonlib = {git = "https://github.com/swaptacular/swpt_pythonlib.git", tag = "v0.8.0"}
pytest = "^7.1.2"
pytest-mock = "^3.8.2"

[tool.poetry.group.dev.dependencies]
pudb = "*"
web-pdb = "*"
python-dotenv = ">=0.10.1"
pytest-pudb = "^0.7.0"
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.1.0"
mypy = "^0.961"
python-lsp-server = {extras = ["all"], version = "^1.7.2"}
black = "^24.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
