[project]
name = "swpt_login"
version = "0.1.0"
description = "Swaptacular micro-service responsible for user's sign up and login"
authors = [
  { name = "Evgeni Pandurski", email = "pandurski@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9,<4.0"
dynamic = [ "dependencies" ]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
gunicorn = "*"
python-json-logger = "^2.0.4"
sqlalchemy = "^2.0.19"
alembic = "^1.8.1"
redis = "^5.2.1"
requests = "^2.24"
user-agents = "^2.2"
psycopg = {extras = ["binary"], version = "^3.1.10"}
requests-oauthlib = "^1.3"
flask = "^3.0.2"
flask-sqlalchemy = "3.0.5"
flask-mail = "^0.10.0"
flask-migrate = "^4.0.4"
flask-redis = "^0.4.0"
flask-babel = "^4.0.0"
swpt_pythonlib = {git = "https://github.com/swaptacular/swpt_pythonlib.git", tag = "v0.10.6"}
pytest = "^7.1.2"
pytest-mock = "^3.8.2"

[tool.poetry.group.dev.dependencies]
pudb = "*"
web-pdb = "*"
python-dotenv = ">=0.10.1"
pytest-pudb = "^0.7.0"
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.1.0"
mypy = "^0.961"
python-lsp-server = {extras = ["all"], version = "^1.7.2"}
black = "^24.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
